--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
 /* Your CSS Code here. */
+.holder{
+	width:200px;
+	height:200px;
+	
+	display:grid;
+	grid-template-columns:repeat(2,100px);
+	grid-template-row:repeat(2,100px);
+}
+.item{
+	
+}
